[Refactor] Chat 리팩터링 수행