@@ -1,35 +1,32 @@
 package com.example.whereshouldwego.service;
 
-import com.example.whereshouldwego.domain.ChatMessage;
-import com.example.whereshouldwego.dto.request.ChatMessageRequestDto;
-import com.example.whereshouldwego.dto.response.ChatMessageResponseDto;
-import com.example.whereshouldwego.repository.mongo.ChatMessageRepository;
+import com.example.whereshouldwego.domain.Chat;
+import com.example.whereshouldwego.dto.request.ChatRequest;
+import com.example.whereshouldwego.dto.response.ChatResponse;
+import com.example.whereshouldwego.repository.mongo.ChatRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ChatService {
 
     private final SimpMessagingTemplate messagingTemplate;
-    private final ChatMessageRepository chatMessageRepository;
+    private final ChatRepository chatMessageRepository;
 
-    public void handleIncomingChat(ChatMessageRequestDto dto, String roomCode) {
-        ChatMessage saved = chatMessageRepository.save(dto.toEntity(roomCode));
-
-        ChatMessageResponseDto response = ChatMessageResponseDto.fromEntity(saved);
-
-        messagingTemplate.convertAndSend("/topic/chat." + roomCode, response);
+    public void handleIncomingChat(ChatRequest dto, String roomCode) {
+        Chat saved = chatMessageRepository.save(dto.toEntity(roomCode, LocalDateTime.now()));
+        messagingTemplate.convertAndSend("/topic/chat." + roomCode, ChatResponse.fromEntity(saved));
     }
 
-    public List<ChatMessageResponseDto> getChatHistory(String roomCode) {
+    public List<ChatResponse> getChatHistory(String roomCode) {
         return chatMessageRepository.findByRoomCodeOrderByCreatedAtAsc(roomCode)
                 .stream()
-                .map(ChatMessageResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .map(ChatResponse::fromEntity)
+                .toList();
     }
 }
